tests/ui/generic_value_try_into.stderr
error: a generic called `VALUE` is not supported, please rename it.
 --> $DIR/generic_value_try_into.rs:5:19
  |
5 | struct DoNotDoThis<VALUE> {
  |                   ^^^^^^^
